# ml-starter

./: .clang-format  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: build-docs.yml  core-checks.yml  publish-package.yml  python-checks.yml  python-publish.yml  template-checks.yml
configs/: cifar_demo.yaml  demo.yaml  image_demo.yaml  kinetics_demo.yaml  moving_mnist_demo.yaml  rl_demo.yaml  video_demo.yaml
docs/: .gitignore  Makefile  about.rst  conf.py  generate_rst.py  getting_started.rst  index.rst
ml/: .gitignore  api.py
ml/core/: common_types.py  config.py  env.py  registry.py  state.py  types.py
ml/launchers/: base.py  ddp.py  mp.py  slurm.py  torchrun.py
ml/loggers/: base.py  meter.py  multi.py  pandas.py  stdout.py  tensorboard.py
ml/lr_schedulers/: base.py  cosine.py  cosine_decay.py  gan.py  linear.py
ml/models/: a2c.py  base.py  codebook.py  embeddings.py  gan.py  init.py  kmeans.py  lora.py  norms.py  parallel.py  resnet.py  video_resnet.py
ml/optimizers/: adam.py  adamw.py  adan.py  base.py  common.py  lion.py  shampoo.py
ml/scripts/: cli.py  compiler.py  create.py  launch.py  mp_train.py  resolve.py  stage.py  train.py
ml/tasks/: base.py  cifar_demo.py  demo.py  image_demo.py  kinetics_demo.py  moving_mnist_demo.py  rl_demo.py  video_demo.py
ml/trainers/: base.py  ddp.py  dp.py  gan.py  rl.py  sl.py  slurm.py  (+1 more)
requirements/: conda.txt  pip.txt
scripts/: benchmark_self_attention.py
tests/: conftest.py
(+168 files in other folders)
