[flake8]

max-line-length = 120

exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.pyi

ignore =
    E712,  # Comparison to false
    E731,  # No lambda functions
    E203,  # Whitespace before ':'
    W503,  # Line break before binary operator

[options]

packages = find:

[options.packages.find]

exclude =
    configs
    tests

[options.entry_points]

# These are command-line scripts that get created.
console_scripts =
    ml = ml.scripts.cli:main
