[flake8]

max-line-length = 120

exclude = .git, __pycache__, build, dist, *.pyi

ignore = E712, E731, E203, W503

[options]

packages = find:

[options.packages.find]

exclude =
    configs
    tests

[options.entry_points]

# These are command-line scripts that get created.
console_scripts =
    ml = ml.scripts.cli:cli_main
